remove all http module and token function